added entity to dto converter to a service class